# Translational-Oscillator-with-Rotational-Actuator_Simulation

./: .gitignore  LICENSE  README.md  config.example.yaml  main.py  prebuild_cache.py  pyproject.toml
analysis/: __init__.py  linearization_sweep.py  region_of_attraction.py
analysis/coupling/: __init__.py  coupling_strength.py  effective_inertia.py
analysis/energy/: __init__.py  kinetic_energy.py  spring_potential_energy.py  total_energy.py
analysis/frequency/: __init__.py  closed_loop_response.py  frequency_response.py  open_loop_response.py  poles.py  sensitivity.py  stability_margins.py  step_response.py
analysis/lqr_verification/: __init__.py  compute_verification.py
analysis/robustness/: __init__.py  monte_carlo_robustness.py  parameter_sensitivity.py
analysis/state/: __init__.py  derived_state.py  phase_portrait.py
analysis/summary/: __init__.py  print_summary.py
control/: __init__.py  closed_loop.py  comparison.py  energy_based.py  hybrid_energy.py  ilqr.py  lqi.py  lqr.py  observer.py  sliding_mode.py
control/cost_matrices/: __init__.py  default_Q.py  default_R.py
dynamics/: __init__.py  trigonometry.py
parameters/: __init__.py  config.py  derived.py  equilibrium.py  model_presets.py  nondimensional.py  packing.py  physical.py
pipeline/: __init__.py  defaults.py  runner.py  save_outputs.py
simulation/: warmup.py
tests/: test_control.py  test_dynamics.py  test_extensions.py  test_linearization.py  test_lqr.py  test_parameters.py  test_simulation.py
utils/: angle.py  experiment.py  logger.py  result_types.py
visualization/: __init__.py
(+63 files in other folders)
